# lamb

./: .dockerignore  .env.next.example  .gitignore  CLAUDE.md  Caddyfile.next  README.md  aac_test_log.md  docker-compose-example.yaml  docker-compose-workers.yaml  docker-compose.next.prod.yaml  docker-compose.next.yaml
.pr-review/: pr233-files.json  pr259-files.json  pr262-files.json
Documentation/: DELETED_ASSISTANT_SHARING_ROUTER.md  i18n.md  lamb_aac_cli_manual.md  lamb_architecture_v2.md  lamb_cli_manual.md  lti_landscape.md
backend/: .env.example  Dockerfile  config.py  docker-entrypoint.py  main.py  requirements.txt
lamb-cli/: README.md
library-manager/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
library-manager/backend/: .env.example  config.py  dependencies.py  main.py
library-manager/backend/database/: connection.py  models.py
library-manager/backend/plugins/: base.py  markitdown_import.py  markitdown_plus_import.py  simple_import.py  url_import.py  youtube_transcript_import.py
library-manager/backend/routers/: content.py  importing.py  libraries.py  system.py
library-manager/backend/schemas/: common.py  content.py  libraries.py
library-manager/backend/services/: content_service.py  export_service.py  import_service.py  library_service.py
library-manager/backend/tasks/: __init__.py  worker.py
library-manager/tests/: conftest.py  test_content_serving.py  test_edge_cases.py  test_export_import.py  test_import_plugins.py  test_libraries.py  test_load.py  test_system.py  youtube_cache.py
testing/: lti_test.py
(+156 files in other folders)
