[project]
name = "lamb-library-manager"
version = "1.0.0"
description = "LAMB Library Manager — document repository microservice"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",

    # Database
    "sqlalchemy>=2.0.30",

    # Markdown processing
    "markdown2>=2.4.0",

    # File upload handling
    "python-multipart>=0.0.9",

    # HTTP client (used by YouTube plugin)
    "requests>=2.31.0",
]

[project.optional-dependencies]
# Import plugins with external dependencies.
# Install all with: pip install ".[all]"
markitdown = [
    "markitdown[all]>=0.1.0",
]
markitdown-plus = [
    "markitdown[all]>=0.1.0",
    "PyMuPDF>=1.24.0",
    "openai>=1.0.0",
]
url = [
    "firecrawl-py>=1.0.0",
]
youtube = [
    "yt-dlp>=2024.1.0",
]
all = [
    "lamb-library-manager[markitdown,markitdown-plus,url,youtube]",
]

dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
